[KARAF-4900]karaf java9 build is broken since 9-ea+148